# ResNet

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
src/: evaluate.py  train.py
src/data/: __init__.py  cifar.py  imagenet.py
src/model/: __init__.py  plain_net.py  plain_net_cifar.py  resnet.py  resnet_cifar.py  vgg.py
src/utils/: __init__.py  plot.py
